--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="task1/index.html"></a>
-    <a href="task2/index.html"></a>
+    <a href="task1/index.html">task 1</a>
+    <a href="task2/index.html">task 2</a>
 </body>
 </html>
