--- a/task2/index.html
+++ b/task2/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="float-right border-l-2 border-gray-200 pl-8 mr-8 h-12 flex items-center">
-            <i id="search_icon" onclick = "search2()" class="fa-solid fa-magnifying-glass"></i>
+            <i id="search_icon" onclick = "search2()" class="fa-solid fa-magnifying-glass hover:scale-105 cursor-pointer"></i>
             <input class="w-64 px-4 py-4 mx-3 h-10 rounded-md" type="text" name="quick_search" id="quick_search" placeholder='Quick Search'>
         </div>
     </nav><br>
